backend tweaks
